--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,16 +1,18 @@
 body{
 	background-image: url("https://ak2.picdn.net/shutterstock/videos/7034680/thumb/1.jpg");
 	background-size: cover;
+	text-align: center;
+	
 }
 #header{
 	font-size: 50px;
 
 }
-.container {
+.jumbotron{
+	background-color: rgba(102, 51, 153, .6);
 	color: white;
-	width: 50%;
-	padding: 25px;
 }
+
 #random-number {
 	font-size: 40px;
 
