--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,13 +2,15 @@ body{
 	background-image: url("https://ak2.picdn.net/shutterstock/videos/7034680/thumb/1.jpg");
 	background-size: cover;
 	text-align: center;
-	font-family: 'Roboto', sans-serif;
+	font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
+	
 	
 }
 #header{
 	font-size: 50px;
 
 }
+
 .jumbotron{
 	background-color: rgba(102, 51, 153, .6);
 	color: white;
@@ -20,4 +22,16 @@ body{
 }
 .minerals {
 	margin: 10px;
+}
+
+.panel {
+	opacity: 0.5;
+}
+
+.panel-body {
+	background-color: rgba(0, 0, 0, 1.0);
+	color: white;
+}
+#instructions {
+	opacity: 1.0;
 }
